...

    <!-- This code was inspired by:
     https://github.com/firebase/quickstart-android/blob/master/database/app/src/main/res/layout/fragment_sign_in.xml
     TODO: better styling-->

    <EditText
        android:id="@+id/fieldLname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.4"
        android:ellipsize="end"
        android:hint="Last Name"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@id/guideline30"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline33"
        app:layout_constraintTop_toTopOf="@+id/fieldFname" />

    <EditText
        android:id="@+id/fieldFname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.4"
...
        app:layout_constraintTop_toBottomOf="@+id/headerUserInfo"
        app:layout_constraintEnd_toStartOf="@id/guideline33"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/guideline29" />

    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.4"
        android:ellipsize="end"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/guideline29"
        app:layout_constraintTop_toBottomOf="@id/fieldFname" />
    <!--TODO: re-enter password feature? -->
    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.4"
        android:ellipsize="end"
        android:hint="@string/password"
        android:inputType="textPassword"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline33"
        app:layout_constraintTop_toTopOf="@+id/fieldEmail" />


    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent="0.1"
        android:text="@string/sign_up"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/guideline32"
        app:layout_constraintEnd_toStartOf="@id/guideline30"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toEndOf="@id/guideline29"
        app:layout_constraintTop_toBottomOf="@id/fieldFoodGoal"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/headerUserInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintBottom_toTopOf="@id/guideline32"
        app:layout_constraintStart_toEndOf="@id/guideline29"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toStartOf="@id/guideline33" />

    <EditText
        android:id="@+id/fieldWaterGoal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:hint="@string/water_goal"
        android:inputType="numberDecimal"
        android:maxLines="1"
...
        android:ellipsize="end"
        android:hint="@string/num_meals"
        android:inputType="numberDecimal"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@id/guideline30"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fieldSleepGoal"
        app:layout_constraintTop_toBottomOf="@+id/fieldSleepGoal" />

    <EditText
        android:id="@+id/fieldSleepGoal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
