<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize">

    <TextView
        android:id="@+id/text_water_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterWaterLog"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/fieldWaterLog"
        app:layout_constraintEnd_toStartOf="@id/guideline16"
        app:layout_constraintStart_toEndOf="@id/guideline15"
        app:layout_constraintTop_toBottomOf="@id/guideline13"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/fieldWaterLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:hint="Number of ounces"
        android:inputType="number"
        android:maxLines="1"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/buttonSubmitWaterLog"
        app:layout_constraintEnd_toStartOf="@id/guideline16"
        app:layout_constraintStart_toEndOf="@id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/text_water_log"/>

    <Button
        android:id="@+id/buttonSubmitWaterLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@id/guideline18"
        app:layout_constraintEnd_toStartOf="@id/guideline16"
        app:layout_constraintStart_toEndOf="@id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/fieldWaterLog" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.99" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99" />

    <TextView
        android:id="@+id/waterGoalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waterGoalField"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/waterLeftToGoalText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/waterLeftToGoalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@id/waterGoalText"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/goalsMetNote"
        tools:text="Oz Water Left to Meet Goal:" />

    <TextView
        android:id="@+id/goalsMetNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/waterLeftToGoalText"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline17"
        tools:text="" />
</androidx.constraintlayout.widget.ConstraintLayout>