<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize"
    tools:context=".ui.petinfo.PetInfoFragment">

    <ImageView
        android:id="@+id/petImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/small_blue_happy"
        app:layout_constraintBottom_toTopOf="@id/guideline39"
        app:layout_constraintEnd_toStartOf="@id/guideline38"
        app:layout_constraintStart_toEndOf="@id/guideline37"
        app:layout_constraintTop_toBottomOf="@id/guideline29"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/foodLogButton"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:src="@drawable/food_log_icon_v2"
        app:layout_constraintBottom_toTopOf="@id/sleepLogButton"
        app:layout_constraintEnd_toStartOf="@id/guideline38"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/guideline37"
        app:layout_constraintTop_toBottomOf="@+id/waterLogButton" />

    <ImageButton
        android:id="@+id/waterLogButton"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:src="@drawable/water_log_icon"
        app:layout_constraintBottom_toTopOf="@+id/foodLogButton"
        app:layout_constraintEnd_toEndOf="@+id/foodLogButton"
        app:layout_constraintStart_toStartOf="@+id/foodLogButton"
        app:layout_constraintTop_toBottomOf="@id/guideline35" />

    <ImageButton
        android:id="@+id/sleepLogButton"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:src="@drawable/sleep_log_icon"
        app:layout_constraintBottom_toTopOf="@id/guideline36"
        app:layout_constraintEnd_toEndOf="@id/foodLogButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/foodLogButton"
        app:layout_constraintTop_toBottomOf="@+id/foodLogButton"
        app:layout_constraintVertical_bias="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99" />


    <TextView
        android:id="@+id/petName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/ageInfo"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintStart_toStartOf="@+id/guideline37"
        app:layout_constraintTop_toBottomOf="@+id/guideline29"
        tools:text="Pet Name" />

    <TextView
        android:id="@+id/ageInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Age: "
        app:layout_constraintBottom_toTopOf="@+id/nextLevelUpInfo"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintStart_toStartOf="@+id/guideline37"
        app:layout_constraintTop_toBottomOf="@+id/petName" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:text="Help"
        app:layout_constraintBottom_toTopOf="@id/waterLogButton"
        app:layout_constraintEnd_toStartOf="@id/guideline38"
        app:layout_constraintStart_toEndOf="@id/guideline37"
        app:layout_constraintTop_toBottomOf="@id/guideline28"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.44" />
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/nextLevelUpInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next Level Up: "
        app:layout_constraintBottom_toTopOf="@+id/guideline28"
        app:layout_constraintTop_toBottomOf="@id/ageInfo"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintStart_toEndOf="@+id/guideline37" />



</androidx.constraintlayout.widget.ConstraintLayout>